@@ -1,3 +1,7 @@
+=
+  * Minor Additions
+    * Set procline for external Ruby handlers
+
 = 2.1.0 / 2010-02-20
   * Major Additions
     * Add access logging
